syntax = "proto3";
package com.sclerck.algorithms;

import "google/protobuf/timestamp.proto";

// [START java_declaration]
option java_multiple_files = true;
option java_package = "com.sclerck.algorithms.protos";
option java_outer_classname = "Connectivity";
// [END java_declaration]

// [START services]
service AlgorithmServer {
  // Server-to-client streaming RPC
  rpc Connect(Parameters) returns (stream Point) {}
}

// [END services]

// [START messages]
message Parameters {
  AlgorithmType algorithm = 1;
  int32 point_rate_changes = 2;
  int32 seed = 3;
  Volatility volatility = 4;
}

message Point {
  float level = 1;
  google.protobuf.Timestamp time = 2;
}

enum AlgorithmType {
  MIDPOINT_DISPLACEMENT = 0;
  PERLIN_NOISE = 1;
}

enum Volatility {
  STABLE = 0;
  NORMAL = 1;
  ABNORMAL = 2;
}
// [END messages]